tests/lean/modBug.lean.expected.out
modBug.lean:1:32-1:61: error: application type mismatch
  Nat.zeroNeOne (Nat.modZero 1)
argument
  Nat.modZero 1
has type
  1 % 0 = 1
but is expected to have type
  0 = 1
