tests/lean/modBug.lean
theorem proofOfFalse : False := Nat.zeroNeOne (Nat.modZero 1)
